# spectra-killer-ai

./: .gitignore  README.md  pyproject.toml  pytest.ini  quick_demo.py  requirements.txt  test_nq_stats_standalone.py
config/: multi_agent_config.yaml  nq_stats_config.yaml
demo_scripts/: __init__.py  backtest_nq_stats_validation.py  multi_agent_trading_demo.py  nq_stats_demo.py  quick_demo.py  test_ai_integration.py  test_enhanced_backtest.py  test_framework.py  test_grok_direct.py  test_mt5.py  test_mt5_connection.py  test_nq_stats_simple.py  test_optimized_decisions.py  test_package.py  test_performance_optimizations.py  test_production_live.py
docs/: MULTI_AGENT_SYSTEM_GUIDE.md  NQ_STATS_COMPLETE_GUIDE.md  NQ_STATS_INTEGRATION.md  XAUUSD_CALIBRATION_GUIDE.md
src/spectra_killer_ai/: __init__.py
src/spectra_killer_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spectra_killer_ai/agents/: __init__.py  agent_coordinator.py  nq_stats_agents.py
src/spectra_killer_ai/core/: __init__.py  engine.py  events.py  portfolio.py  position.py  risk_manager.py
src/spectra_killer_ai/data/: __init__.py
src/spectra_killer_ai/data/sources/: __init__.py  mt5_connector.py  simulator.py
src/spectra_killer_ai/integrations/: __init__.py  moon_dev.py
src/spectra_killer_ai/interfaces/: __init__.py  analyzer.py  cli.py
src/spectra_killer_ai/interfaces/dashboard/: __init__.py  app.py
src/spectra_killer_ai/ml/training/: __init__.py  data_loader.py  model_trainer.py
src/spectra_killer_ai/security/: auth.py  credential_manager.py  database_security.py  secure_logging.py  validators.py
src/spectra_killer_ai/strategies/: __init__.py
src/spectra_killer_ai/strategies/advanced/: __init__.py  liquidity_analyzer.py  nq_stats_analyzer.py  nq_stats_integration.py  order_flow_analyzer.py  session_analyzer.py  volume_profile.py
src/spectra_killer_ai/strategies/hybrid/: __init__.py  nq_stats_hybrid_strategy.py
src/spectra_killer_ai/strategies/ml/: __init__.py  cnn_trader.py
src/spectra_killer_ai/strategies/technical/: __init__.py  technical_analyzer.py
src/spectra_killer_ai/utils/: __init__.py  helpers.py  metrics.py  validation.py
tests/: __init__.py  test_nq_stats.py  test_risk_integration.py
tests/test_backtesting/: __init__.py
tests/test_core/: test_position.py
tests/test_ml/: __init__.py
