[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-killer-ai"
version = "2.0.0"
description = "Advanced AI Trading System with CNN Deep Learning"
authors = [{name = "Spectra Killer AI Team", email = "info@spectrakiller.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["trading", "ai", "cn", "xauusd", "metatrader", "algorithmic-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "asyncio-mqtt>=0.13.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
trading = [
    "MetaTrader5>=5.0.35",
    "ta>=0.10.0",
]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.2.0",
]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "plotly>=5.15.0",
    "websockets>=11.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/spectra-killer-ai/spectra-killer-ai"
Documentation = "https://spectra-killer-ai.readthedocs.io/"
Repository = "https://github.com/spectra-killer-ai/spectra-killer-ai"
Issues = "https://github.com/spectra-killer-ai/spectra-killer-ai/issues"

[project.scripts]
spectra-killer = "spectra_killer_ai.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spectra_killer_ai*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10"]
unfixable = ["B"]
ignore = ["E501", "N806"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
